--- a/business/finance/财富的起源.md
+++ b/business/finance/财富的起源.md
@@ -1,3 +1,4 @@
+《财富的起源》
 《国富论》：财富并不是一个确定不变的概念，事物的价值取决于某个特定时间上他人的支付意愿
 约翰*梅纳德*凯恩斯：长期是对当前事务的错误引导。从长远来说，我们都会死去
 经济活动是开放系统
@@ -73,3 +74,6 @@
     金融市场的波动性远高于传统经济学让我们相信的水平
     现实世界的经济是一个比传统经济学想象的均衡世界有趣得多的地方。<strong>不稳定的振荡、间断均衡和幂律</strong>，这些都是复杂的适应性经济在起作用的标志性行为
     
+
+
+在进化系统中，停滞是导致种群灭绝的关键
