--- a/business/要读的书/1.md
+++ b/business/要读的书/1.md
@@ -367,3 +367,17 @@
 雪球郭荆璞推荐
 《金融帝国贝莱德》
 麦克尼尔《全球观》、卡普兰《荒野帝国》、雷斯托尔《西班牙征服的七个神话》、米哈伊尔《奥斯曼之影》
+
+
+
+
+《第四消费时代》
+
+
+
+李录推荐
+罗伯特赖特（Robert Wright） 的《为什么佛学是真实的》、《道德动物》、《神的演化》、《非零年代》
+《未来简史》、《人类简史》
+《原则》
+
+文一《伟大的中国工业革命》
