--- a/business/读书笔记/大国锁钥.md
+++ b/business/读书笔记/大国锁钥.md
@@ -25,3 +25,38 @@
 美国的波音、英特尔、德州仪器、苹果、微软、谷歌、甲骨文、GE、惠普这些大型科技企业的发展，身后都有军方旗下DARPA（Defense Advanced Research Projects Agency，美国国防高级研究规划局）的影子
 CRH380系列使用湖南株洲电机厂或山西永济电机厂生产的电机，在最强状态下，功率可以达到2万千瓦以上
 2017年6月，标动正式亮相，并被命名为“复兴号”，代号CR400，中国标准总计254项，占比达84%，80%的零部件为自主可控的国产产品，寿命和性能都远超之前的“和谐号”动车组
+
+风、光发电量受天气因素影响很大，中间的空缺主要靠煤电填补的
+2021年1-8月份全国全社会用电量54704亿千万时
+    其中第一产业用电量660亿千万时
+        第二产业（制造业）用电量36529亿千万时
+        第三产业（服务业）
+设备商中最突出的则是特变电工和许继电气
+
+国际工程机械排行榜Yellow Table2021年给出的排名：
+1.美国CAT
+2.日本小松
+3-5.徐工、三一、中联
+
+2017年，中国疏浚装备研发建造能力进一步提升，排在荷兰、比利时之后
+振华重工的港机设备目前在全球市场份额常年稳定在70%以上
+中国善于发展这两种行业：
+1.新兴行业，特别是2000之后兴起的行业
+2.专门的、细分的行业，特别是产业链较短且消费属性较弱的行业
+
+海外5轴以上的机床更是长期对中国实行禁运。两大知名企业秦川机床和日发精机都是2019年才刚刚扭亏为盈。
+直到今天，中国机床产业的劳动生产率水平依然和海外存在数倍的差距
+一套机床的数控系统研发周期是10-20年，而这仅仅是从无到可用的一个过程，稳定性仍不能保证。国内也涌现出诸如华中数控、广东数控等为代表的国产数控系统研发企业
+
+中国工业软件之所以会存在”品类不全“，“有点无面”的问题，根源在于中国工业的发展水平仍然落后于先进国家
+
+个性化推荐系统一般分为3个部分：特征、函数模型、目标
+华为鸿蒙，它做系统的逻辑就不是移动互联网的逻辑，而是物联网时代的逻辑。
+
+我们国内的奶牛是杂交的，基本都是近代引进以来的荷兰荷斯坦奶牛和中国黄牛杂交
+看了之后发现牛奶、养殖真不是一个好生意
+
+
+据央视报道，2017年全球男性，仅男性在化妆品市场上花掉了4000亿元，这个数字比2017年全人类为手游花掉的钱，整整多出一倍
+护肤品因为受众人群基数远高，分掉了75%左右的市场规模
+肉毒素有巨毒，但在极少量使用情况下，却可以延缓皮肤衰老形成皱纹。目前国内肉毒素还没有实现国产替代
