--- a/daily/invest/中国投资人.md
+++ b/daily/invest/中国投资人.md
@@ -1,3 +1,9 @@
+【全哥】
+我的成长经历告诉自己：底层的人都是互相补信任的，都是短视和无知的，机会永远不缺少，但是平庸的人既看不见也不相信，别人成功了也要过去踩两脚，说我都不行凭什么呢？ 自从我看明白人性，再也不拉黑任何人，反而会可怜平庸的人
+
+不需要删除任何观点，我喜欢直截了当的评论方式，有助于自我纠正。偏执确实会有，但是是自己真实的体验，真实的情况比这个更残酷。比如你创业过程中，发现伤害你的都是最亲近的人，背叛你的都是最好的兄弟，还会发现正常人都会落井下石，所以才有了福不双降祸不单行。还会发现更残酷的事实：除了父母没有人希望你比他过得好（亲人朋友同学都希望你好，但是不希望你过得比他好）。你好了更多人都拖你后腿。就像我一个X警队的同学酒后吐真言：你不出事我们怎么有机会帮你呢？（这个事情的前提是：真正出事他们确实也没有能力帮，停留在嘴边的嘘寒问暖不如默默无闻的推一把）。这些都是真实的感受，可能我之前算半个文学青年，做了生意还有一点点感性，但是也只对陌生人开放，因为伤害自己都是身边的人
+
+
 【韩柏青】
 投资者说
 
