--- a/business/finance/财富的起源.md
+++ b/business/finance/财富的起源.md
@@ -73,7 +73,50 @@
     通常情况下，发生严重崩盘的日子里并没什么大新闻可说，股价走势看上去不太像随机游走，而像另一种现象：地震  => 幂律
     金融市场的波动性远高于传统经济学让我们相信的水平
     现实世界的经济是一个比传统经济学想象的均衡世界有趣得多的地方。<strong>不稳定的振荡、间断均衡和幂律</strong>，这些都是复杂的适应性经济在起作用的标志性行为
+
+    囚徒困境博弈
+    复杂经济学的先驱之一：密歇根大学的罗伯特阿克塞尔 ”社会科学研究的大肠杆菌“
+    非零和博弈的存在以及由此产生的利己与合作之间的矛盾在复杂经济学中起了核心作用
     
+   
 
 
 在进化系统中，停滞是导致种群灭绝的关键
+进化论与经济学类比研究：
+    开拓者是理查德纳尔逊和悉尼温特 《经济变革的进化理论》 【有个缺点：缺乏大量的计算数据理论做支撑】
+        => 20世纪70年代 - 80年代 
+            1975年约翰霍兰德《自然和人工系统中的适应》
+            1976年理查德道金斯《自私的基因》
+            1982年约翰梅纳德史密斯《进化与博弈论》
+            1993年斯图尔特考夫曼《秩序的起源》
+            
+ 进化系统的一个共同特点是，为一个目的发展出的创新可能会被另一个目的所取代，这一个过程被称为预适应。
+ 经济依赖于两个因素的存在：使人们创造值得交易的产品和服务的物理技术，以及使非亲属在创造和交易这些产品或服务时顺利合作的社会技术
+ 理查德福斯特，提出了技术的自然生命周期理论《创新：攻击者的优势》，S型曲线
+
+ 国家财富主要决定因素：一个国家的社会技术状况，
+ 法治、产权、运行良好的银行体系、经济透明度、清廉程度以及其他社会和制度因素比其他因素对国家经济的发展水平的影响更大。
+ 欺骗着（基本）从不会赢，而赢家（基本）从不欺骗
+ 加州大学圣地亚哥分校人类学家和认知科学家埃德温哈钦斯（Edwin Hutchins）研究了不同环境下个体与群体的解决问题的能力。他得出的结论是：组织拥有集体的、新兴的能力，而这些能力是团体内部的个人不具备的。
+
+ 在物理技术和社会技术的定义之上，我们可以用以下方式定义企业：
+ 企业是为了营利而将物质、能量和信息从一种状态转换到另一种状态的个人或团队组织
+ 公司是由一个人或一群人共同控制的一个或多个企业
+
+ 政治干预的主要影响是减缓进化的进程，在极端情况下，首领、国王、独裁者和其他大男人实际上可以阻碍经济发展的轨迹，只要人们仅仅是接近饿死，而不会真正饿死，这种进化的死胡同就可持续很长时间
+
+ 经济学家 威廉鲍莫尔所说：自由市场厉来都是“创新机器”，现代世界大量的物理技术和社会技术创新都来自市场经济
+ 市场经济的发展并非发生在大爆炸中，而是两个世纪以来社会技术进化的结果。引发这一变化的两个关键事件是英国议会民主的建立和美国革命
+
+ 尼古拉斯乔治斯库罗根《熵定律与经济过程》（The Entropy Law and the Economic Process）
+ 任何创造价值的过程都是既不可逆又会使熵降低的
+ 总体来看，人们的需求、品味和商业计划表明经济活动本质上是关于秩序创造的
+ 
+ 真正的竞争优势既罕有又相对短暂
+ 
+大部分流程都集中于创造和作出决定，而不是学习。集中于学习的计划流程具备三个主要属性
+企业愿景如何内化：
+杰克韦尔奇立下的愿景：“成为市场上数一数二的公司，拥有小企业的速度和灵活性”。韦尔奇的愿景是清晰的、有挑战性、有感染力、令人难忘的
+制定愿景时必须找到平衡
+
+伯顿马尔基尔《》
