--- a/business/finance/连锁/达美乐.md
+++ b/business/finance/连锁/达美乐.md
@@ -1,2 +1,3 @@
+达美乐
 通过辛勤努力、拥有好奇心、对科技投资，以及对顾客满意度的专注，莫纳汉建立了一个60年后还一直持续发展的企业。
-因为空间很小，没什么地方做比萨的准备工作，于是他想出一个非常聪明的办法：在克里斯街的店里为两个店做准备工作，把另一家店需要的材料每天开车送过去。他发现，把准备工作集中使他能够开设更小、更高效的店，这些店可以专注于制作和派送披萨
+因为空间很小，没什么地方做比萨的准备工作，于是他想出一个非常聪明的办法：在克里斯街的店里为两个店做准备工作，把另一家店需要的材料每天开车送过去。他发现，把准备工作集中使他能够开设更小、更高效的店，这些店可以专注于制作和派送披萨。
