--- a/business/要读的书/1.md
+++ b/business/要读的书/1.md
@@ -1,3 +1,4 @@
+要读的书：
 投资：
 《追寻价值之路》
 《涛动周期两部曲》
@@ -303,7 +304,7 @@
 
 
 《深度分销方式》
-《长期有耐心 - 美团的成长与进化逻辑》
+### 《长期有耐心 - 美团的成长与进化逻辑》
 
 
 《门口的野蛮人》
@@ -381,3 +382,13 @@
 《原则》
 
 文一《伟大的中国工业革命》
+
+
+
+《竞争优势：透视企业护城河》 布鲁斯格林沃尔德
+
+
+待看文章：https://xueqiu.com/5135726117/263042514
+https://xueqiu.com/7909530279/262663548
+https://xueqiu.com/8565549431/119646733?scene=1036&share_uid=9411281193
+https://mp.weixin.qq.com/s/F-rFTwpQJqjZqzmjZV4Vhg
