--- a/business/finance/房地产/房地产.md
+++ b/business/finance/房地产/房地产.md
@@ -33,3 +33,9 @@
 
 资深房地产投资者建议：市区边缘、二手、国有开发商、毛坯、亲民盘、大户型、低单价、纯住宅
 屌丝选房不愿意在硬指标（地段、楼层、朝向、景观、层高、水泥用料）上花钱
+
+
+毛大庆
+到2015年的时候，北上广深100平米的住宅价格已经到了城市职工平均年均收入的三四十倍以上，租售比已经到了非常不正常的地步。
+但我们的产业的变革、社会的改革、制度的更迭，往往都滞后于重大的社会问题。
+王石他一直保持着强烈的学习精神以及好奇心，这是他能保持年轻态的重要因素。他还是一个明显的过程主义者，比起结果，往往更看重过程。
