--- a/business/学习财报/财务知识学习.md
+++ b/business/学习财报/财务知识学习.md
@@ -32,3 +32,10 @@ PE=总市值/净利润
 静态市盈率=当前市值/上一年度的净利润
 滚动市盈率=当前市值/最近4个季度的净利润之和
 动态市盈率=当前市值/未来年度净利润预测值
+
+
+
+股东利润与自由现金流
+https://xueqiu.com/2647565570/78991831
+企业的面子、里子和底子以及现金流三层漏斗
+https://xueqiu.com/9656826842/264106749
