--- a/business/要读的书/1.md
+++ b/business/要读的书/1.md
@@ -388,6 +388,12 @@
 《竞争优势：透视企业护城河》 布鲁斯格林沃尔德
 
 
+
+
+《新编21世纪公共管理系列教材：当代中国政府与政治》 景跃进、陈明明、肖滨
+《统一与分裂：中国历史的启示》（2013）葛剑雄
+
+
 待看文章：https://xueqiu.com/5135726117/263042514
 https://xueqiu.com/7909530279/262663548
 https://xueqiu.com/8565549431/119646733?scene=1036&share_uid=9411281193
