--- a/daily/healthy/众病之王-癌症传.md
+++ b/daily/healthy/众病之王-癌症传.md
@@ -1,240 +1,123 @@
-现代化学疗法之父 —— 西德尼*法伯
+癌症传
+现代化学疗法之父 —— 西德尼法伯
 
 白血病是白细胞发生的癌症   
-
 ​	特征：红细胞指标严重不足，不到正常的1/3
 
 癌细胞（比正常细胞）生长的更快、适应的更好，癌是我们自身一个更完美的"版本"
-
-
-
 玛丽◆居里就是死于数十年暴露于放射线下所导致的白血病
-
-
-
 20世纪90年代 赫塞汀治疗乳腺癌，布拉德菲尔德是接受这种治疗后存活时间最长的幸存者
 
-
-
 白血病
-
 ​	慢性—— 慢性平缓发展，缓慢地腐蚀骨髓和脾脏
-
 ​	急性 —— 突然的发热、阵发性出血
-
 ​		根据所涉及的癌细胞类型，又进一步分为两个亚型。正常血液中的白细胞，可大致分为两种类型的细胞
-
 ​			髓样细胞
-
 ​			淋巴细胞
-
 ​				急性淋巴细胞白血病（ALL）是不成熟的淋巴细胞的癌症
-
 ​				较成熟的淋巴细胞的癌症被称为淋巴瘤
-
 成人每毫升血液中有5000个白细胞
-
 红细胞计数降的太低，已无法进行充分的氧气供应
-
 血小板（负责凝血的细胞）已经奔溃到几乎为零，导致了身体上的淤伤
-
 氨基喋呤—— 叶酸拮抗剂可以促进白细胞计数的下降
-
 癌症是一种与年龄相关的疾病，其发生概率有时是呈指数性地随年龄增加。
 
-
-
 X射线 ——  格拉比 说 X射线只可用于治疗原位肿瘤，对于转移后的肿瘤，效果微乎其微。
-
 随着X射线的出现，催生了**放射肿瘤学**
-
 X射线第二个局限更是阴险骇人 —— 辐射造成癌变
-
-
-
 放疗也有先天不足，由于X射线只进行局部照射，所以对于已转移的肿瘤，治疗效果有限
-
-
-
 正如盖伦所理解的那样，癌症是一种系统性疾病
 
 埃尔利希 —— 化学疗法
 
-
-
 李敏求无意中发现了一个深刻但基础的肿瘤学原理 —— 癌症治疗必须在每一种可见迹象都消失后，仍然继续保持系统的治疗。
-
-
-
 病房里都是患有这种可怕疾病的孩子，白细胞计数高达300，可能隔夜就死了
-
 弗雷瑞克和弗雷将要尝试的疗法 是所有四种药物的组合 —— 长春新碱、甲氨蝶呤、6-巯基嘌呤和强的松。称为VAMP，1963年随着这种治疗方式不能在神经系统阻止白血病细胞的扩张而失败。
 
-
-
 霍奇金病是恶性疾病的另一个混杂体，它是介于局部癌症与系统性癌症之间的疾病。
-
 霍奇金病在很大程度上讲是一种局部疾病
-
 细胞毒素化疗变成一把双刃剑，一方面治疗癌症，另一方面引发癌症。
-
-
-
 细胞突变假说，这一理论主张：烟灰或镭元素这类环境致癌物会以某种方式永久改变细胞的结构，从而引发癌症
 
 <img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220609163715774.png" alt="image-20220609163715774" style="zoom:50%;margin-left:-1px" />
 
 1958年 癌症病毒学说传开了
-
-
-
 达纳法伯和玛丽拉斯克
-
-
-
 1891年到1981年将近一百年的时间，当根治性手术被证明失败之后，整个外科手术文化也随之消融。如今根治性乳房切除术已经很罕见了。
 
-
-
 细菌需要进行DNA的复制才能分裂
-
 为了上越战战场，很多年轻人蜂拥进入国家卫生研究院，进行新的实验、测试新的药物组合。在国家癌症研究所和它在世界上的学术前哨，各种配方的名字已经进化出自己的语言：ABVD、BEP、C-MOPP、ChlaVIP、CHOP、ACT
-
-
 
 哈金斯：癌症不一定是自主内在性地自我永存，它的生长可以通过宿主内的激素作用得以维系和传播。正常细胞和癌细胞成长和生存之间的联结，远比我们之前想象得紧密。恶性肿瘤可以通过我们自己的身体获得营养壮大。
 
-
-
 乳腺癌的病例可以分为两种：
-
 ​	受体高水平表达的ER阳性肿瘤
-
 ​	低水平表达的ER阴性肿瘤
-
 表达雌激素受体的细胞，可以结合三苯氧胺这种药物（一种雌激素拮抗剂）切断了雌激素的反应，从而阻止了该细胞的生长。在癌症的研究史上，第一次由一个核心分子逻辑把药物、药物靶向受体及癌细胞结合在了一起
 
 
-
 癌症具有巨大的异质性的，这种异质性是基因性的
-
 癌症分成不同的发病阶段
 
-
-
 临终关怀中心
-
-
-
 比灵丹妙药更强有力的，是相对不引起注意的市政设施的变化  —— 更好的饮食起居、居住环境、卫生设施，污水处理系统和通风设备的改善，降低了美国和欧洲的肺结核的死亡数。
 
 
-
 预防癌症：
-
 长期嵌在皮肤里的烟囱煤烟最可能是阴囊癌的诱因
 
-
-
 蚊子是疟疾的携带者，或者白砱是黑热病的携带者
-
 战争通常会刺激两种产业：军火和烟草业
 
 
-
 1884年微生物学家罗伯特科赫提出，一种病原要被定义为某种疾病的“病因”必须至少满足三个标准：
-
 * 病原体必须出现在患病动物中
 * 一定要能从患病动物体内分离出病原体
 * 病原体进入第二宿主时能传播疾病
 
 
-
 20世纪80年代逐渐释放出对香烟的规范力量，将烟草烟雾归为强致癌物质，这是癌症预防的重大胜利之一。
-
 幽门螺旋杆菌被无可争议地认定为胃部炎症的病因
-
-
 
 如果每一种癌症的“真相”都已经刻画到了它的行为中，那么人们要怎样才能捕捉到这种神神秘秘的特质呢？ 科学家们怎样才能做出关键性的转变 —— 从简单地看见癌症，过渡到知道其恶化的潜能、它的弱点、它的传播的方式，以及它的未来？  20世纪80年代，癌症预防的整个学科受阻于这个关键所在。这个难题欠缺的一环就是对癌变的更深层次理解。
 
-
-
 艾滋：
-
 IDAV —— 它很可能就是艾滋病的
 
-
-
 在所有癌症中，肺癌依旧是最大的杀手，癌症死亡中的近1/4是由肺癌引起的。
-
-
-
 孟德尔发现基因可以代代相传； 摩根证明这是通过染色体传递的，1926年，艾弗里发现在某些细菌中，基因可以在两个生物体间相互传递
-
 到了40年代中期，基因的分子性质逐渐清晰起来，基因在功能上，就是把生物特性从一个细胞运载到另一个、从上一代传给下一代的遗传单位。在物理形态上，基因以染色体的形式存在于细胞内部。在化学成分上，基因是由脱氧核糖核酸组成的。
 
-
-
-
-
 特明和巴尔的摩在各自的论文中，提出了关于逆转录病毒生命周期的新理论
-
 化学物质导致DNA突变引起癌症，是因为它们改变了细胞的原癌基因。吸烟者与非吸烟者细胞里都有相同的原癌基因，但吸烟者得癌症的比率更高，是因为烟草中的致癌物提高了这些基因的突变率
 
-
-
 ras就是人们长期寻觅的人类“本身的”致癌基因，ras的发现帮助癌症遗传学家完成了一项挑战：他们已经从癌细胞中提纯出突变的致癌基因
-
 ras和Rb这两个致癌基因和抑癌基因
 
-
-
 癌症遗传学家已经知道了这个问题的两个答案：
-
 * 原癌基因需要通过突变来激活，而突变是小概率事件。
 * 肿瘤抑制基因需要去活，但通常每个肿瘤抑制基因存在两个副本，因此需要两次独立的突变才能使它失活，这更是罕见的。
 
 
-
 脐带血是已知最丰富的成血干细胞的来源之一。这种细胞可以被存储在冷库中，用于在未来治疗白血病的时候进行骨髓移植。
-
 肺癌下降 - 吸烟者的减少
-
 结肠癌和宫颈癌死亡率下降是来自二级预防（癌症筛检）的功劳，运用巴氏涂片技术筛检子宫颈癌，已被普及到全美各级的初级保健中心
-
 白血病、淋巴瘤、睾丸癌死亡率的下降要规划于化疗。 儿童急性淋巴性白血病一般能达到80%的治愈率。霍奇金病，以及一些大细胞性侵袭性淋巴瘤也同样可以治愈
-
 三种干预可能导致了乳腺癌死亡的下降：乳房X射线检查（筛检发现早期乳腺癌，从而防止侵袭性乳癌）、手术、辅助化疗（手术后化疗消灭残余癌细胞）
 
 
-
-
-
 手术和放射治疗本质是局部性的策略，而癌细胞超出了这个范围无法进行手术切除或X射线灼烧的时候，这两种策略就无计可施了。
-
 因此最新的癌症医学面临的重要挑战就是要在正常细胞和癌细胞的大量相似之中，找到两者在基因、通路、捕获目标的能力等方面的细微差别，然后，向这新的脚踵射一枝毒箭。
-
-
-
 到1993年，王振义和迭格斯做出结论，在他们用反式视黄酸和标准化疗结合治疗的病人中有75%
-
-
 
 在基因泰克公司之前，人们虽然已经认识到蛋白质药物的强大威力，但这种药物却极难生产。8000磅的胰腺才能提取1磅的胰岛素；生长激素是从成千上万具尸体的脑垂体中提取出来的，用于侏儒症；而用于治疗出血性疾病的凝血药物，则需要大量人血才能提炼出来。
 
-
-
 1993年，对慢性粒细胞白血病的主要疗法是异体骨髓移植，该疗法是20世纪60年代由唐纳尔*托马斯在西雅图创立的。一项研究得出结论：虽然摆脱白血病只能依靠骨髓移植，但骨髓移植对整体生存的益处只能在少数患者体现出来... 要评估它对生存的影响，
-
 ![image-20220617110723307](/Users/yangli/Library/Application Support/typora-user-images/image-20220617110723307.png)
 
 如今当我再看到慢性粒细胞白血病患者时，我告诉他们这是一种病程缓慢的白血病，预后良好，只要他们终生口服格列卫，通常都能颐养天年。
-
 1999年6月，格列卫已经成为慢性粒细胞白血病患者的标准药物。
-
 索耶斯发现，白血病细胞通过一个更加狡猾的机制变得能够抵抗格列卫：细胞发生突变，特异性地改变了Bcr-abl结构，创造出一种仍然能推动白血病增长却不能与药物结合的蛋白。
-
 2005年，索耶斯团队和百时美施贵宝公司的化学家合作，生产了针对耐格列卫的Bcr-abl的激酶抑制剂。这种新药物达沙替尼它通过蛋白质表面上另一个单独的分子缝隙抵达Bcr-abl的心脏。
 
 ![image-20220617154011987](/Users/yangli/Library/Application Support/typora-user-images/image-20220617154011987.png)
@@ -244,41 +127,25 @@ ras和Rb这两个致癌基因和抑癌基因
 
 
 有两个团队在对癌症基因组进行测序中遥遥领先。其一是癌症基因组图联盟，拥有多个分布在数个国家的几个实验室的相关合作团队；
-
 其二是约翰斯 霍普金斯大学科学家伯特 福格尔斯坦的团队
-
-
 
 每一个病人的癌症都是独一无二的，因为每个癌症的基因组都是独一无二的
 
 
-
 癌症从描述性生物学到功能性生物学的重大转变，将为癌症医学带来三个新方向：
-
 * 癌症治疗的新方向：一旦确定在任何特定癌症的关键性司机突变，我们将需要寻找靶向疗法来针对这些基因
-
 * 癌症的预防
-
   低纤维、红肉丰富的饮食增加患结肠癌的风险，肥胖与乳腺癌相关；但还有许多这样的关联依旧未知，特别是在分子层面
-
 * 整合我们对异常基因和通路的认识，把癌症的行为作为一个整体来进行解释，从而形成新知识、发现和干预治疗的循环
 
 
 
 乔治比特森受一个苏格兰牧羊人传说的启发，发现了移除卵巢可以减慢乳腺癌的生长，这一发现引来了数十亿美元的药物 他莫昔芬
-
 ![image-20220617175512763](/Users/yangli/Library/Application Support/typora-user-images/image-20220617175512763.png)
-
 ![image-20220617175531654](/Users/yangli/Library/Application Support/typora-user-images/image-20220617175531654.png)
 
 
 
-
-
 对于大多数局部性癌症来说，外科手术仍然是主流治疗方法
-
 ![image-20220617183531154](/Users/yangli/Library/Application Support/typora-user-images/image-20220617183531154.png)
-
-
-
 ![image-20220617182918181](/Users/yangli/Library/Application Support/typora-user-images/image-20220617182918181.png)
