--- a/daily/invest/关于周期的思考.md
+++ b/daily/invest/关于周期的思考.md
@@ -4,3 +4,5 @@ topic：周期、经济周期、行业周期、金融周期
 《周期》中
 心理周期的见解：
 最好的应对周期的方法就是“发现市场走到极端，并且能利用走到极端的市场”
+
+从晓荣老师那里学得，对周期要保持一定的敬畏之心，仓位配置不得高于5%。要清楚知道周期中间的供求关系。有个现象是行业中大批企业倒闭可能算周期局部低点了
