--- a/daily/心理学/随机漫步的傻瓜.md
+++ b/daily/心理学/随机漫步的傻瓜.md
@@ -1,1 +1,30 @@
 塔勒布《随机漫步的傻瓜》
+认识黑天鹅事件的错误是：只关注历史经验（experience），而没有关注风险暴露（exposure）
+我们仍和许久以前漫游在非洲大草原上的老祖宗很接近，我们信念的形成充满着迷信，即使现今也不例外。
+文人有故意将噪声（noise）和意义（meaning）混为一谈的倾向，也就是把随意构成的作品和刻意营销的信息混淆
+如果失败的代价过于沉重、难以承受，那么这件事情成功的概率有多高根本无关紧要
+梭伦：只有承蒙上苍垂怜从此能幸福以终的人，我们才能称之为幸福快乐
+塔利波认为参与高收益市场，就好比在铁轨上打盹，终有一天下午，突如其来的火车会撞死你
+我们能够根据一个人的表现和个人财富来判断他们是否成功呢？有时可以，但不见得永远如此
+
+我们在讨论一项行业时，必须考虑踏进那一行人士的平均值，而不是拿一个已经成功的人做样本
+玩俄罗斯转盘赚来的1000万美元，价值不同于靠辛勤努力和娴熟的牙医技术赚来的1000W美元
+一般人却看不见现实生活举起的枪管，肉眼很难看到这些发生器(generator)，因此我们可能在不知不觉中就玩上了俄罗斯转盘，只是以另外较”低风险“的名称称呼它而已
+爱因斯坦说过：常识不过是18岁以前学得一大堆错误看法
+行为经济学的开路先锋卡尼曼和特沃斯基
+每个人都相信自己与众不同，等到诊断出疾病，才大感震撼地说：”为什么是我？“
+信息的问题不在于它令我们分心且通常一无用处，而且在于它含有毒性
+菲洛斯特拉托斯有句格言：神看到未来的事情，平凡人看到眼前的事情，聪明人看到即将发生的事情
+这可以解释为什么太密切注意随机性的人反倒会被烧伤，他们由于体验到一连串的痛苦，情绪上精疲力尽
+
+维也纳学派是维特根斯坦、波普尔、卡尔纳普等人提出各种观念的发祥地
+索卡尔（Alan Sokal）所著的讽刺作品《知识的骗局》（Fashionable Nonsense）
+作者喜爱波德莱尔（Baudelaire）或卡内蒂（Elias Canetti）、博尔赫斯、圣琼佩斯（Saint-John Perse）等诗人的诗
+
+消防站效应：消防队员闲着没事干，久而久之，聊的太多，就会对很多事情形成相同的看法，而这些看法，在客观的局外人看来，十分荒唐可笑
+不管约翰和卡洛斯去做什么事，他们仍是不懂随机性的傻瓜（类似高杠杆、赌徒这一类人。在股市、债市等金融市场很容易财富归0）
+有句格言说，要做烂交易员放弃头寸，比叫他们离婚还难，死守某些观念对交易员、科学家、或任何人都不好
+
+古尔德发现偏态（skewness）的概念，《中位数不能传达什么》（The Median is Not the Message）：医学研究机构使用的中位数概念，不具备概率分布的特性
+看好或看坏的概念往往空洞无物，不能用到充满随机性的世界中，尤其是如果这个世界有很多不对称结果的话
+
