--- a/基础/读书/思考书/人月神话.md
+++ b/基础/读书/思考书/人月神话.md
@@ -96,8 +96,60 @@ mmills的建议：
     减少角色冲突
     
 ### Chapter15：另外一面（The other face）
-
 自文档化，其实就是代码见名知意等一些规范
 
 提高效率：
 高级语言
+
+
+
+2023年重读
+推荐序:
+    人月神话 => 大型软件？   小型软件能不能用？ 按理说本质都是软件，都可以用？
+    构建系统产品？ not  构建“简单程序”
+    沟通交互都会引入额外的成本，向延期的软件项目添加新人会使项目拖得更久。软件开发任务间复杂的依赖关系需要科学管理，避免无效的人力投入
+    软件不可见性和抽象性是导致软件复杂性的根本原因
+    ? 软件工程“没有银弹”的观点还成立吗？
+
+第一版序言
+    本书的中心论点包含在第2-7章。关键是维持产品自身的概念完整性
+chapter1 焦油坑（前车之覆，后车之鉴）
+    我们所面临的挑战和任务是基于实际的进度和可得的资源，寻找解决实际问题的切实可行方案
+chapter2 人月神话（美食的烹调需要时间：片刻等待，更多美味，更多享受）
+    计算机编程往往基于十分容易掌握的介质，编程人员只需要通过纯粹的思想活动及灵活的表现形式来构建。正是由于介质易于驾驭，我们通常期待在实现过程中不会碰到困难，因此造成了乐观主义的弥漫
+    我们的乐观主义并不应该是理所应当的
+    以人月的估算可能有些偏颇，除非他们之间不需要相互的交流
+
+    任务又因为复杂程度分为：
+        可以完全分解的任务
+        无法分解的任务
+        需要沟通的可分解的任务
+        关系错综复杂的任务
+    因为构造软件本质上是一项系统性的工作
+
+    对于软件开发任务的进度安排，以下是我成功使用了很多年的经验法则：
+        1/3用于计划
+        1/6用于编码
+        1/4用于构建测试和早期系统测试
+        1/4用于系统测试，此时所有的构建已就绪
+    特别需要指出的是，不为系统测试安排足够的时间简直就是一场灾难
+
+    怯懦的估算
+        我们需要开发和公布生产率统计数字、缺陷率统计数字、估算规则等，只有通过分享这些数据，整个行业才能受益
+        这些工具没出来前，只有通过靠谱经理的估算
+
+        Brooks定律：
+        向进度落后的软件项目增加人手，会使进度更加落后
+        在众多软件项目中，缺乏合理的进度安排是造成项目滞后的最主要原因，它比其他所有原因加起来的影响还要大
+
+chapter3 外科手术团队
+    从效率和概念的完整性角度来说，人们更喜欢少数优秀的头脑来设计和构造；而对于大型系统，则需要大量的人手，以使产品能在时间上满足要求。如何调和这两方面的矛盾？
+    Mills建议大型项目每一部分由一个团队解决，该团队以类似外科手术团队的方式组建。只有一个人操刀，其他人给予他各种支持，以提高效率和生产力。
+
+    角色分类：
+        外科医生
+        副手
+        管理员（政委？ 组织者？ CHO？）
+        编辑
+        两个文秘
+        程序文员
