--- a/business/policies/置身事内.md
+++ b/business/policies/置身事内.md
@@ -47,3 +47,70 @@
         土地财政
             地方可以增加预算外收入，其中最重要的就是围绕土地出让和开发所产生的“土地财政”
             1994年分税制改革时，国有土地转让的决策权和收益都留给了地方
+            当然地方政府也不是靠卖地赚钱，它真正的是土地开发之后吸引来的工商业经济活动
+            “土地财政”的实质是“房地产财政”
+            土地的资本化运作，本质是把未来的收益抵押到今天去借钱，如果借来的钱投资质量很高，转化成了有价值的资产和未来更高的收入，那债务就不是大问题
+
+        纵向不平衡和横向不平衡
+            总体来看，分税制改革后，基层财政出现了不少困难，引发了一系列后续改革，最终涉及了财税体制的层级问题。到底要不要扁平化，学发达国家搞三级财政？是不是每个省都应该搞？ 对于相关改革效果和未来方向，目前仍有争议
+    
+政府投融资与债务
+    土地本身不值钱，值钱的是土地之上的经济活动。若土地只能用来种小麦，价值便有限，可若能吸引来工商企业和人才，价值想象的空间就会被打开
+    
+    城投公司与土地金融
+        实业投资通常是个连续的过程，需要不断投入，每个阶段打交道的对象不同，所需的专业和资源不同，要处理的事务和关系也不同。任一阶段出了纰漏，都会影响整个项目。
+        在很长的一段时间内，中国GDP增长的主要动力来自投资，这种增长方式必然伴随着政府深度参与经济活动。这种方式是否有效率，取决于经济发展阶段
+        现实世界中没有定义，只有表象，只有环环相扣的权责关系
+    地方政府债务
+        城投公司最主要的融资方式是银行贷款，其次是发行债券，即通常所说的城投债
+        但对城投债来说，绝大数城投债都在银行间市场发行，七八成都被商业银行持有，流动性差，风险依然集中在银行系统
+        2017年，除了北京、上海、广东、福建、四川和安徽等六省外，其他省份的融资平台公司的平均收入，若扣除政府补贴，都无法覆盖债务利息支出。但政府补贴的前提是政府有钱，这些钱主要来自土地开发商有关的各种收入。一旦经济遇冷，地价下跌，政府也背不起沉重的债务。
+        地方债的治理与改革
+            债务置换
+                地方政府发行的公债，替换一部分融资平台公司的银行贷款和城投债
+                债务置换是为了限制债务增长，规范借债行为
+            推动融资平台转型，厘清与政府之间的关系，剥离其为政府融资的功能，同时破除政府对其形成的“隐性”担保
+            约束银行和各类金融机构
+            问责官员
+
+工业化中政府的角色
+    无论是土地还是税收优惠，都无法改变招商引资的根本性决定因素，即本地的资源禀赋和经济发展前景
+    面板
+        京东方
+            京东方在融资策略上做了调整，其后数条生产线的建设都采用股权融资：先向项目所在地政府募集足够的资本金，剩余部分再使用贷款
+    光伏
+        做这种产业链的，一定要全世界的龙头才有规模效益，很多产能死翘翘了的。想了下房地产市场还是足够大，中国人追求美好生活的向往还在就还是持有万科
+
+        产业政策要有退出机制，若效率低的企业不能退出。
+
+
+下篇：宏观现象
+
+城市化与不平衡
+    中国特有的城市土地国有制度，为政府垄断土地一级市场创造了条件，将这笔隐匿的财富变成了启动城市化的巨大资本，但也让地方财源高度依赖土地价值，依赖房地产和房价。房价连着地价，地价连着财政，财政连着基础设施投资，于是经济增长、地方财政、银行、房地产之间形成了"一荣俱荣、一损俱损"的复杂关系
+    这种以土地为中心的城市化忽视了城市化的真正核心：人，地价要靠房价拉动，但房价要由老百姓买单，按揭要靠买房者的收入来还，所以土地的资本化，实质是个人收入的资本化
+
+    房价与居民债务
+    房价上涨不仅会增加按揭债务负担，还会拉大贫富差距，进而刺激低收入人群举债消费，这一现象被称为“消费下渗（trickle-down consumption）”
+    这种依靠借债的消费无法持续，因为钱都被花掉了，没有形成未来更高的收入，债务负担只会越来越重
+
+    不平衡与要素市场改革
+    户籍落户放宽
+
+    经济发展与贫富差距
+    经济增速下降首先冲击的是穷人收入
+    影响子女收入最重要的因素就是经济增长的大环境
+
+债务与风险
+    2018年末，我国债务总量达到了GDP的258%
+    
+    债务与经济衰退
+    发达国家经济中最重要的组成部分是消费，对经济影响很大，美国的消费约占GDP的七成
+    债的特性，即法律优先保护债权人的索赔权，而欠债的无论是公司还是个人，即使破产也要清算债偿
+
+    欧美的教训
+    房地产周期和银行信贷周期常常同步起伏，而这两个行业的杠杆率又都不低，也就进一步放大了经济波动
+    为保持美元的国际储备货币地位，美国的对外贸易可能需要常年保持逆差，以向世界提供更多美元。但持续的逆差会累积债务，最终威胁美元的储备货币地位，这个逻辑也被称为“特里芬悖论”，所以如今的全球经济失衡，是贸易失衡和美元地位带来的资本流失失衡所共同造就的。
+
+    中国的债务与风险
+    我国居民债务负担接近发达国家，政府债务负担低于发达国家，但企业债务负担高于发达国家。2018年末，企业债务总额约140万亿元，但在境内的股票融资余额不过区区7万亿元
