--- a/business/social/肖知兴/以热爱战胜恐惧.md
+++ b/business/social/肖知兴/以热爱战胜恐惧.md
@@ -1,4 +1,5 @@
 《以热爱战胜恐惧》
+肖知兴
 经济发展初期，粗放行业发展，未有科学的管理革命，未认识到专业化的管理。还有管理学本来就是国外流入进来的，怎样与中国本土结合。是需要实践者和研究者耐心地结合中国文化、制度、历史环境做一些本土“创造性转换”
 
 内部管理，不仅需要同理心，往往更需要是较多的同情心
