--- a/business/要读的书/1.md
+++ b/business/要读的书/1.md
@@ -22,7 +22,7 @@
 商业
 《正向盈利》
 《为什么是中国》  金一南
-《3G资本帝国》
+#### 《3G资本帝国》
 我建议读者先读《3G资本帝国》，后读《赋能式投资》
 《分析与思考》
 ##### 《伟大的博弈》
@@ -316,7 +316,7 @@
 《自由秩序原理》哈耶克
 《格鲁夫给经理人的第一课》
 
-《我的改变》王石
+#### 《我的改变》王石
 
 
 英国 李嘉图《政治经济学及税赋原理》
@@ -332,7 +332,7 @@
 《引爆流行》
 《精益创业》
 《创新者的窘境》
-《零售的哲学》
+#### 《零售的哲学》
 《好战略、坏战略》
 
 
@@ -387,6 +387,7 @@
 
 《竞争优势：透视企业护城河》 布鲁斯格林沃尔德
 
+东南大学华生《城市化转型与土地陷阱》
 
 
 
