--- a/business/policies/置身事内.md
+++ b/business/policies/置身事内.md
@@ -114,3 +114,36 @@
 
     中国的债务与风险
     我国居民债务负担接近发达国家，政府债务负担低于发达国家，但企业债务负担高于发达国家。2018年末，企业债务总额约140万亿元，但在境内的股票融资余额不过区区7万亿元
+    “量化宽松”的主要问题是难以把增发的货币转到穷人手中，因此难以刺激消费支出，还会拉大贫富差距
+    国民党政府就曾经搞过赤字化，彻底搞垮了货币经济
+    货币政策治标不治本，无法从根本上解决债务负担背后的经济增速放缓问题，因为这是结构性的问题，是地方政府推动经济发展的模式问题
+
+    化解债务风险
+    在我国将来的金融体系中，究竟间接和直接融资各占多大比重，国有金融企业和机构（包括政策性银行和社保基金等）在其中该扮演何种角色，都还是未知数
+    总体来看，我国债务风险的本质不是金融投机的风险，而是财政和资源分配机制的风险
+
+国内国际失衡
+    低消费与产能过剩
+        我国储蓄率的分析，主流的解释是计划生育、政府民生支出不足、房价上涨三者的共同作用
+        我国是世界上最大的工业机器人使用国，2016年就已占到了世界机器人市场的三成
+        从宏观角度看，对外贸易失衡也是内部结构失衡的延续
+    
+    中美贸易冲突
+    再平衡与国内大循环
+        中央在2020年提出“加快构建以国内大循环为主体、国内国际双循环相互促进的新发展格局”。这是提出了一个发展战略的转型
+        随着我国生产率的提高，人民币从长期看还是会继续升值（有没有跟国内超发货币进行对冲，保持一个汇率的稳定？）
+        完善的市场本就是经济发展的结果，而不是前提
+        未来，只有继续推进各类要素的市场化改革，继续扩大开放，真正转变地方政府角色，从生产型政府转型为服务型政府，才能实现国内市场的巨大潜力，推动我国迈入中国收入国家行列
+
+
+政府与经济发展
+    地区间竞争
+    政府的发展与转型
+        国家越富裕，政府在国民经济中所占的比重也往往越大，而不是越小，这一现象也被称为“瓦格纳法则”。因为随着国家越来越富裕，民众对政府服务的需求会越来越多
+        本书阐述的”地方分权竞争 + 中央协调“或”官场+市场“的模式，属于中国特色
+        民生支出的主力必然是地方政府而不是中央政府，2019年，政府在教育、医疗、社会保障的总支出中，地方占96%，中央占4%。中央通过转移支付机制，有效地推动了地方间基本公共服务支出的均等化，但这并没有改变地方民生支出主要依靠地方政府的事实
+    发展目标与发展过程
+        有经济史学家在研究美国崛起的过程中曾言：”在成功的经济学中，经济政策一定是务实的，不是意识形态化的，是具体的，不是抽象的“
+
+
+        https://xueqiu.com/3393395193/268194015
