--- a/business/传记/查理芒格.md
+++ b/business/传记/查理芒格.md
@@ -6,3 +6,4 @@
 表里如一
 
 投资的重大危险之一是我们可能会爱上一家公司或一项投资，每当这个时候，我们就会变得盲目，我们的思考方式也会变得不理性、不务实，我们必须回过头思考
+低价买入质地较差的公司，除非能迅速转手卖出去，否则长期持有，只能获得中等偏下的收益。买入时低廉的价格，看似让你占了便宜。时间长了就会发现，任凭你怎么努力，这种公司都难以摆脱平庸的本质。
