--- a/business/要读的书/1.md
+++ b/business/要读的书/1.md
@@ -393,7 +393,14 @@
 
 《新编21世纪公共管理系列教材：当代中国政府与政治》 景跃进、陈明明、肖滨
 《统一与分裂：中国历史的启示》（2013）葛剑雄
-
+合英国央行前行长金关于银行和金融系统的杰作《金融炼金术的终结：货币、银行与全球经济的未来》（2016）一起阅读
+南京大学-约翰斯·霍普金斯大学中美文化研究中心研究员包尔泰（Armstrong-Taylor）就中国的金融体制和债务写过一本简明通俗的书Debt and Distortion: Risks and Reforms in the Chinese Financial System（2016），是很好的入门读物
+彭博的经济学家欧乐鹰（Orlik）最近出版了一本小书China:the Bubble that Never Pops（2020），标题很有趣，“中国，永不破裂的泡沫”
+另一本是英国经济学家米尔恩（Milne）的The Fall of the House of Credit: What Went Wrong in Banking and What Can be Done to Repair the Damage?（2009）
+关于我国银行系统的风险和改革，两位参与其中的投行经济学家沃尔特和豪伊写了一本很专业但不难理解的书，《红色资本：中国的非凡崛起和脆弱的金融基础》（2013）
+经济史专家图兹的杰作Crashed: How a Decade of Financial Crises Changed the World（2018）值得再次推荐
+北京大学光华管理学院佩蒂斯的两本书从多个角度解释了国际不平衡的前因后果，通俗易懂：《大失衡：贸易、冲突和世界经济的危险前路》（2014）及Trade Wars are Class Wars: How Rising Inequality Distorts the Global Economy and Threatens International Peace（Klein and Pettis，2020）
+这里谨推荐一本历史学家王赓武的杰作China Reconnects: Joining a Deep-rooted Past to a New World Order（Wang，2019）
 
 待看文章：https://xueqiu.com/5135726117/263042514
 https://xueqiu.com/7909530279/262663548
