--- a/daily/invest/中国投资人.md
+++ b/daily/invest/中国投资人.md
@@ -188,3 +188,29 @@ ps：流量是忽悠穷人的。长期来看消费者很聪明。
 时时在评估公司的内在价值，在中国股市评估公司始终是看增长，不增长的公司无法通过清算价值来估值，一定要看增长的公司才值得投资，不然就是输钱又输时间
 A公司 EPS：1块钱，10年后EPS：1块钱 10年后内在价值不变，输钱输时间
 B公司 EPS：1块钱，10年15%增速，23PE
+
+
+
+【王文总】
+认知做一个儒家的少年，持股有佛家的生态。交易做法家思维
+我们民族是现象的民族，不是逻辑的民族。
+认知 = 勤奋 + 好奇心 + 阅历 + 智商 + 热爱 + 长期主义 + 谦卑感
+
+长期为价值投资创造了绝佳的机会
+我们只能以弱者的心态，追求小股东的价值
+
+【投资就是分钱】
+基于价值的成长模型，五大选股标准：
+    低估值（行业的标准估值之下就是低估值）
+    高现金流（
+            没有自由现金流的企业是很危险的，，，这里注意是【自由现金流】，要深刻理解自由现金流。穿透三张表：
+                1.利润表，要有利润
+                2.现金流量表，要有自由现金流
+                3.资产负债表也要好
+            ）
+            愿不愿意分红，分给小股东，考验人，看人品
+    高分红
+    业务长期可持续
+    有梦想
+AH寻找：人民币升值，港股涨。
+不追高
