--- a/基础/读书/思考书/人月神话.md
+++ b/基础/读书/思考书/人月神话.md
@@ -110,6 +110,7 @@ mmills的建议：
     沟通交互都会引入额外的成本，向延期的软件项目添加新人会使项目拖得更久。软件开发任务间复杂的依赖关系需要科学管理，避免无效的人力投入
     软件不可见性和抽象性是导致软件复杂性的根本原因
     ? 软件工程“没有银弹”的观点还成立吗？
+        Brooks认为软件开发中无法规避的四个特性：复杂度；一致性；可变性；不可见性
 
 第一版序言
     本书的中心论点包含在第2-7章。关键是维持产品自身的概念完整性
@@ -153,3 +154,6 @@ chapter3 外科手术团队
         编辑
         两个文秘
         程序文员
+
+chapter 没有银弹
+    
