--- a/business/company/通用电气.md
+++ b/business/company/通用电气.md
@@ -1,1 +1,25 @@
 通用电气
+通用电气的诞生，就像它之后的发展一样，更多是为了赚钱，而不是为了发明创造。爱迪生与通用电气的联系微乎其微，它是金融巨头们电气行业的多个早期参与者聚焦在一起的产物，因为电气技术的发展需要庞大的规模，更需要大量的资本。
+《熄灯》
+
+GE在2000年鼎盛的时候，通用电气是美国最有价值的公司，其市值接近6000亿美元
+
+图萨，摩根大通跟踪通用电气的投资主管
+把通用电气的评级从增持到中性。在门外汉眼里，这种金融术语的变化可能没什么意义，但业内人士知道，这代表他撤回了对通用电气股票的至少价值数千万美元的背书
+通用电气的票据发行出现问题 以小见大，普通民众最开始是很难发现的，除非跟了公司很多年，熟悉财务报表
+早在2002年太平洋投资管理公司的比尔格罗斯发出的警告正在变成现实，他曾表示，通用电气过度依赖商业票据非常危险，因为该公司没有指定支持业务需求的应急计划，而很多金融服务基金都制定了相应的计划，或者说被要求指定相应的计划
+天都塌下来了，可通用电气还在考虑并购，这很难不让人起疑
+
+联邦存款保险公司的总裁希拉拜尔，她认为，冒险会得到回报，但也可能受到惩罚。换句话说，押错住的人理应承担损失
+2008年美国共和党麦凯恩竞选团队负责人史蒂夫施密特说：“在政治家的竞选和公司的竞争活动中，候选人或公司不是靠最优秀的品质或产品取胜的，他们是靠最简单的故事及清晰的讲述取胜的”
+康斯托克总结的秘诀是“创作一个简单的故事.... 多次讲述，重复再重复”
+
+奥巴马总统当年夏天（2009年）提议的全面改革构成了《多德-弗兰克华尔街改革与消费者保护法案》的基础，承诺不再使用纳税人的钱为企业纾困的这一法案于2010年7月奥巴马总统签署生效，有效地促进了整个金融体系的改革
+
+通用电气从最初卖各种家电、小家电，综合集团。现在该公司的核心客户大多是机构，包括医院、军队、公用事业和发电设备、航空公司等
+成功的叙事会引发成功，而卓越的想象力和创新是这一切的前提
+
+金融服务部门
+    一些颇有先见的投资者认为，该公司的风险深不可测。傲慢自大是该公司决策者普遍具有的特点
+
+通用电气建立油气部门时没想到油价会出现这样的变化
