--- a/business/基金经理/邓晓峰.md
+++ b/business/基金经理/邓晓峰.md
@@ -1,1 +1,55 @@
+邓晓峰
+
 我从来不认为自己一定是对的，而是看事情怎么发展，产业怎么变化，企业怎么运作
+投资体系：“兴趣、坚持、客观”
+聚焦增长型、体量大行业，犹如大海，无风不起浪，机会更多
+
+中国的经济结构趋同于美国，我的理解也有可能趋同于日本
+互联网所代表的对消费和娱乐行业影响，这是比较大的一块增量
+
+疫情
+在家办公或网上办公是另一个收益方，
+快递、物流行业在这次疫情也体现出了重要性
+
+
+“所有行业本质上都可以回归到本源，就是你为用户创造了什么价值，怎么样去实现回报”
+例如银行业，银行生意本质是一个高杠杆赚利差的商业模式。钱是它的生产资料，银行的回报率是由社会发展阶段、经济回报率以及社会的平均回报率所决定的
+对新兴行业的研究要提前，但投资不怕买不到，就怕买错或者买贵。要把这个行业发展的脉络或者每个环节的特点总结出来，看清楚
+二级市场不要担心买不到，只要担心买贵或者买错了
+
+最好的选择肯定是既处于需求决定的阶段，又处于供给结构变的非常清晰，壁垒非常高的阶段，如果同时满足这两个条件，就属于可以重点关注的机会了，因为它既有长长的雪道，又有厚厚的坡
+首先从需求角度看，判断一个行业生命周期的时候，要判断它的容量有多少，处于生命周期发展的哪个阶段，渗透率是我们首要考虑的指标
+决定是否重点关注，要从两个维度来看，第一个是确信度，第二个是未来隐含的投资回报率。如果确信度高，隐含回报率也很高，例如我们分析预估年化回报率20%左右，就比较容易把投资比例加上去；如果分析出的复合回报率在15%以上，可能就是不错的机会，最好还要评估未来5年的情况，如果分析出的复合回报率达到20%，那它可能会是很好的投资机会。
+
+生意属性比较差就要选差异化，不要选标品
+“二八”现象在各个行业都会越来越普遍。存量经济时代做投资很有难度，既要看到现在跟过去的不同，又要看到未来的变化到底是怎样的
+
+任何时候都没有完美的企业，有时候你认为它是完美的，但它可能正在孕育下阶段的挑战。所以我们需要保持一个更谦虚的心态，企业发展过程会犯错，我们做投资也是不断从错误中去总结经验，通过下一步的修正逐步实现一个更好的结果。我们对企业要有容错能力，对我们自己也要有容错能力。
+归根到底还是要看错误的量级，就是你判断这个错误，是从根本上影响企业的核心竞争力，还是只是一些经营层面的影响，比如几个季度的财报数据变差了。如果它的核心优势没有改变的话，就要多一份包容。因为世界永远不会按照你的预期直线地发展，一定会有很多意外的发生。我们要把我是对这个公司最基本的假设，最根本的投资逻辑，这是最重要的。
+资本市场的特性是容易在正确的方向上过头，我把它当做资本市场本身的属性和特点，资本市场从来不会严格按照计算公式反映经济情况，往往是乐观时过于乐观，悲观时过于悲观
+
+过去30年，中国经济快速发展，大多数行业都处于这样的阶段。80年代初期到2010年之前是需求拉动的阶段，增长是最重要的属性，企业家的冒险精神占更大因素
+当行业逐渐走向成熟，供给成为决定性因素，行业内竞争结构会出现巨大分化，不一定是最有冒险精神的企业或者企业家能胜出，可能是管理水平最好、商业模式最独特、技术水平和效率最高的企业逐渐胜出。产业发展的不同阶段会有不同的赢家，这是经济从快速发展待成熟阶段都会经历的过程。
+
+底线思维是这次经济对冲政策的根本出发点，不是为了短期经济反弹，是从更长期的角度适应外部环境的巨大变化
+
+# 投资找三类机会：价值增长、价值转移和错误定价的机会
+作为主动投资人，我们会找三类机会
+1.大家都有共同的增长和价值创造的机会，增长永远有最多机会
+2.产业变迁和价值转移的机会，它不一定是增量，更多是替代、存量重新分配的过程
+3.从作者自身来说，非常喜欢站在市场的反面寻找哪些领域有市场的偏见，是不是有市场错误定价错误的机会，可能不一定是市场热门，也不一定市场最喜欢的领域
+    下行周期往往更容易辨别谁是真正的赢家，它是自然的自我淘汰和选择的过程
+
+煤价：隔一段时间去看一下秦皇岛煤价指数
+电力公司资产负债率特别高，相当于杠杆加的很大，就像贷款买房，加了很高的杠杆，一旦行情回暖，全行业的回报率可以到非常高的水平，电力行业持续亏损几年，关注的人特别少，所以我觉得这是一个爆炸性的机会。
+
+# 在行业低迷的时候开始跟踪，观察到出现好的迹象开始投资，在行业开始稳定的时候加大投资比例。什么时候下重手买哪些公司，需要跟踪观察
+我们认为驱动市场向前的根本力量是企业的价值创造，资本市场反应的是产业的变迁，竞争的变化。与市场上大多数参与者相比，我们的优势是超强学习的能力，是迅速去伪存真，区分单纯的概念与真正的行业趋势，发现关键因素，找到最好的企业和企业家的能力，我们一直在强化这种能力。
+只有基于企业的成长和价值创造才能穿越周期
+
+所以我们买股票之前先问问自己：下跌以后敢加仓吗？ 如果你不敢，最好一开始就别买，因为价格的波动是不可避免的
+总结出行业或公司的特质和观察指标，一旦指标动了，我们就可以做投资。关键点在于这个行业壁垒很高。
+
+当一个经济体的发展速度慢下来，需求增长进入稳定阶段 —— 中国的大多数需求其实已经获得满足，就会发生根本性的变化。转型的根本，是公司要适应低增长，这时管理效益的差异会显示出来，行业内部会高度分化，猪也能飞起来的时代过去了，我们需要选择那些不是完全标准化、高度同质化、没有运输距离限制的行业（这些是属性比较差的行业）。能够实现差异化的行业，具备竞争优势的企业不止能实现份额的提高，而且能够实现利润的集中。
+
+我们认为，用市净率（PB）/净资产收益率（ROE）方式评估银行的估值，合理的情况是如果是15%的ROE，对应的PB水平是1.2倍左右
