--- a/business/要读的书/1.md
+++ b/business/要读的书/1.md
@@ -23,7 +23,8 @@
 《正向盈利》
 《为什么是中国》  金一南
 #### 《3G资本帝国》
-我建议读者先读《3G资本帝国》，后读《赋能式投资》
+我建议读者先读《3G资本帝国》，
+后读《赋能式投资》
 《分析与思考》
 ##### 《伟大的博弈》
 《文明的冲突 + 文明的冲突与世界秩序的重建》
@@ -169,7 +170,7 @@
 《艳阳天》
 《红霞》
 《置身事内：中国政府与经济发展》 兰小欢
-《影响力》 罗伯特西奥迪
+# 《影响力》 罗伯特西奥迪
 《巴芒演义》 唐朝
 《商业性质概论》 理查德康迪隆
 《通往成功的交易心理学》
@@ -299,7 +300,8 @@
 《贝索斯传》
 
 
-《巴菲特传》、《光荣与梦想》
+《巴菲特传》、
+《光荣与梦想》
 《狂人分子》埃里克霍弗
 
 
