--- a/daily/invest/关于周期的思考.md
+++ b/daily/invest/关于周期的思考.md
@@ -1,5 +1,6 @@
 topic：周期、经济周期、行业周期、金融周期
 库存周期(3年)、朱格拉周期(7-10年)、建筑周期(15-20年)、康波周期(55-60年)
+每一个康波又嵌套2-3个库兹涅茨周期（地产周期）和5-6个朱格拉周期（美林周期）
 
 《周期》中
 心理周期的见解：
