--- a/business/传记/郑毓煌.md
+++ b/business/传记/郑毓煌.md
@@ -2,3 +2,26 @@
 
 德鲁克：营销和创新是任何企业有且只有的两大基本职能
 创业要想成功，最重要的并非具有产品创意，而是坚持
+
+哥大市场营销
+美国营销学术界的常青树唐纳德雷曼教授
+
+现代营销学之父
+菲利普科特勒
+
+“折中效应”的发现者
+斯坦福大学的著名教授伊塔玛西蒙森
+
+研究灵感通常是交流和讨论当中迸发的，而像餐厅、咖啡厅或者酒吧这种场所的轻松氛围更能激发创造力
+有会员卡的顾客比没有会员卡的顾客更容易笑，也更可能给服务员小费
+
+财务 号码机
+目标梯度效应（goal gradient）：目标梯度效应描述的是离目标越近，就会越努力。当会员越接近奖品的时候，就会越努力，即提高购买频率，企业从而通过忠诚度计划创造了更多需求
+
+进步的错觉（the illusion of goal progress）。现在很多企业提供的开卡或者加入会员送积分的活动，本质上应用的都是我们在这项研究里发现的进步的错觉和目标梯度效应
+
+作者的论文观点：
+人在努力之后会放松自我控制
+除了努力，优秀也会让人放松自我控制
+能够让人发送自我控制的另外一个关键因素是不花钱
+
