--- a/business/company/丰田.md
+++ b/business/company/丰田.md
@@ -1,4 +1,24 @@
 东西方老祖宗传给我们一套"守-破-离"，丰田正在应用这套思维。这三部曲是戴明博士提出"计划、执行、检查、处理（PDCA）科学方法的前身"
 在现场：产品是如何设计、生产和使用的，我们还存在哪些问题。问题永远都会存在，因为我们永远都不会是完美的，能真正把握问题的唯一方式就是要亲临"现场"
 
-石油上涨对汽车也是暴击，08年金融危机丰田汽车销量下滑40%，当然现在是新能源时代，走一步看一步。丰田在面对金融危机时不裁员，对员工进行培训，足足持续三个月时间
+石油上涨对汽车也是暴击，08年金融危机丰田汽车销量下滑40%，当然现在是新能源时代，走一步看一步。丰田在面对金融危机时不裁员，对员工进行培训，足足持续三个月时间。
+丰田之道即精益生产，其具体内容是，“现地现物”（genchi genbustu）或“亲赴现场查看”,这个原则的含义是，在尽可能的情况下，做出决定的都应该是那些在发生现场对情况了如指掌、
+能提出切实可行的解决方案的人。领导者在从基层往管理职位晋升时，对其深入“现地”有着严格的要求：要深入工作场地或车间，要对真实情况了如指掌。
+
+六西格玛 => 精益六西格玛
+员工不是一味埋头于自己的工作来实现岗位上客观的业绩，而是关注消费者、关注在不同岗位之间传递价值流的提高。
+不同的世界观不同的管理理念
+
+明确的奖励会产生这种负面作用。丰田使用的标准更多的应当被视为帮助员工对照目标衡量自己的工具，而不是帮助管理者控制员工的工具。
+倘若劳资关系不是面向目标并建立在信任与合作的基础上，模仿丰田意图将会无疾而终。
+
+丰田的人力管理实践
+丰田的方法是通过在工人中建立起公平、互信的人力资源体系和政策， 营造出让所有组员能够发现并汇报问题且积极参与解决的工作环境。
+丰田以前从来不需要在公司外部寻求领导者，因为效力于公司数十年的行家里本身就具备相应的技能和思维模式
+
+传统领导力和丰田领导力
+丰田的领导力是调动所有人的主观能动性，而不是由管理者一个人来逞英雄。在共同的行动中个人必须归于无形。在达成共识的基础上促进周围人的发展。
+丰田相信，在领导力的角逐中，慢而稳才是唯一胜出的方式
+在丰田，人们常说，衡量一位领导者成功与否的最佳尺度，是他们训练出来的人所取得的成就
+
+丰田之道的价值观：挑战精神、不断改善、现地现物、团队协作和尊重他人
