--- a/business/传记/散户乙.md
+++ b/business/传记/散户乙.md
@@ -1,1 +1,13 @@
 散户乙
+股市走势和利率有很大关系
+我们要紧盯房地产的走向，只要房地产冷一段时间，失去了赚钱的效应，资金不再蜂拥进去，甚至还有资金从里面出来，
+则市场上的银根必定会宽松起来，实际利率就必定趋势向下。
+
+决定股市牛熊的是股票的筹码性质
+周期性公司：
+    万科这家公司，只有在房地产低迷，各地的土地卖不出去，房地产公司纷纷倒闭的时候，它才会发生耀眼的光芒，也才是进入万科的最好时机。
+
+关于白酒：
+如果老窖有一天死了，一定是他自己作死的，而不是因为其他酒企强大被挤死的。在白酒行业看不到可乐、牛奶、凉茶、啤酒行业那样的硝烟，大家经常其乐融融
+互通有无的欢聚一堂。
+    白酒的竞争：如果你现在对白酒行业足够了解，可以买到目前很小但未来可以跻身百亿的酒企，回报一定比现在买茅台高。白酒企业不适用，买就买老大，老二老三会死的很惨的这一逻辑（2016-09-03）。
