--- a/business/company/丰田.md
+++ b/business/company/丰田.md
@@ -20,5 +20,12 @@
 丰田的领导力是调动所有人的主观能动性，而不是由管理者一个人来逞英雄。在共同的行动中个人必须归于无形。在达成共识的基础上促进周围人的发展。
 丰田相信，在领导力的角逐中，慢而稳才是唯一胜出的方式
 在丰田，人们常说，衡量一位领导者成功与否的最佳尺度，是他们训练出来的人所取得的成就
+美国公司总有一种期望，期望在公司面临重大危机的时候能有外来者扭转乾坤。丰田的成功在于拥有可以成功应对商业环境中所有重大挑战的机制，而且通常是由本公司
+内部有着多年经历的领导者的领导下进行的。请谨记，在丰田将近100年的历史中还从来没有哪一位社长不是终其一生为公司服务的
+起源于农耕文化的丰田，只需要观察一个人如何面对困难的挑战，就能判断出此人是否勤奋。因此，只要通过观察员工在困境中如何带领团队，就能够顺理成章地判断出他们的领导能力
 
 丰田之道的价值观：挑战精神、不断改善、现地现物、团队协作和尊重他人
+如果说日本就是一个凭着借鉴而发展起来的国家，那么丰田也是靠借鉴起家的。在公司整个发展过程中，领导者一直都留意新的思想发展，但他们绝不会简单照搬。公司
+出现的问题会促使人们寻求解决方案，任何新思想都要经过细心的引入和改善，直到完全融入到丰田生产体系和丰田方式中。
+
+乐器
