--- a/business/传记/散户乙.md
+++ b/business/传记/散户乙.md
@@ -4,10 +4,23 @@
 则市场上的银根必定会宽松起来，实际利率就必定趋势向下。
 
 决定股市牛熊的是股票的筹码性质
+如果你认为短期业绩增加几倍，公司价值也应该增长几倍，那后果一定很惨（2020年的英科医疗，2022年底的以岭药业）
 周期性公司：
     万科这家公司，只有在房地产低迷，各地的土地卖不出去，房地产公司纷纷倒闭的时候，它才会发生耀眼的光芒，也才是进入万科的最好时机。
 
 关于白酒：
+对于白酒企业的判断，最好的参考是回顾历史而不是根据个人感受来展望未来。大家经常启了
 如果老窖有一天死了，一定是他自己作死的，而不是因为其他酒企强大被挤死的。在白酒行业看不到可乐、牛奶、凉茶、啤酒行业那样的硝烟，大家经常其乐融融
 互通有无的欢聚一堂。
     白酒的竞争：如果你现在对白酒行业足够了解，可以买到目前很小但未来可以跻身百亿的酒企，回报一定比现在买茅台高。白酒企业不适用，买就买老大，老二老三会死的很惨的这一逻辑（2016-09-03）。
+    白酒的产量
+
+世界越来越进步越发达，主要是因为分工越来越细。而分工越细，每个个体的专业技能就越单一，综合能力就越差。这就是为什么人类总是觉得一代不如一代，而世界是越来越进步的一个原因
+【agree】投资最大的敌人就是：买的时候就想着多长时间赚几倍。这种思想要不得。这会把投资引入效率的概念，即越短时间回报越高就是越好的投资，这会将投资引入歧途，
+要做到这样，你就必须要正确判断那些根本无法判断的东西。
+看好中国是宏观的，而做多中国却是微观的，因为要把做多中国落到实处，就必须要落实在具体的行业和具体的公司上
+一眼定胖瘦！ 出手时机！
+
+
+关于负债：
+    我把负债和加杠杆的机会留给 出现危机，出现打折资产的时候。
