--- a/business/company/丰田.md
+++ b/business/company/丰田.md
@@ -24,6 +24,27 @@
 内部有着多年经历的领导者的领导下进行的。请谨记，在丰田将近100年的历史中还从来没有哪一位社长不是终其一生为公司服务的
 起源于农耕文化的丰田，只需要观察一个人如何面对困难的挑战，就能判断出此人是否勤奋。因此，只要通过观察员工在困境中如何带领团队，就能够顺理成章地判断出他们的领导能力
 
+以下是丰田公司最看重的领导力技能：
+- 积极开放地去观察公司的运营
+- 主动聆听他人的真言
+- 系统思维
+- 了解每个人的优缺点
+- 阐明问题并发现问题的根源
+- 善于计划
+- 创造性地找出根除问题的对策
+- 负责地将计划落实为行动
+- 花时间和精力用于深度反思，以便进一步发现提高的机会
+- 有能力在以上这些方面指导他人
+
+"守-破-离"层层循环学习贯穿于一个人的一生
+"守-破-离"具化为5个方面：
+- 标准化作业（表现）
+- 老师深入地观察指导
+- 学生在努力过程中不会得到现成的答案
+- 获得实践和反馈的岗位培养
+- 逐步增加挑战以增加学生才干
+
+
 丰田之道的价值观：挑战精神、不断改善、现地现物、团队协作和尊重他人
 如果说日本就是一个凭着借鉴而发展起来的国家，那么丰田也是靠借鉴起家的。在公司整个发展过程中，领导者一直都留意新的思想发展，但他们绝不会简单照搬。公司
 出现的问题会促使人们寻求解决方案，任何新思想都要经过细心的引入和改善，直到完全融入到丰田生产体系和丰田方式中。
