--- a/business/social/中国投资人/段永平.md
+++ b/business/social/中国投资人/段永平.md
@@ -1,2 +1,7 @@
 # 段永平
 重要的事情要尽早开始做，不要让其变成紧急的事情
+
+1999年讲话：
+一个企业的失败往往只是一个人的过错，那就是最高领导者的过错，但一个企业的成功则一定是大家的功劳
+平常心、进取心、耐心、责任心和爱心形成了我们企业的本分，它是我们企业走到今天这一步的基本点，也是下个世纪我们要继续遵循的基本原则
+本分就是要做对的事情和把事情做对。平常心就是回到事物本源的心态，也就是要努力认清什么是对的事情，认清事物的本质
