读书笔记-借势

--- a/business/读书笔记/借势.md
+++ b/business/读书笔记/借势.md
@@ -64,8 +64,15 @@
 主动示弱：暴露隐私，你只能引来电信诈骗。而暴露弱点，能够筛选出真正支持你的人，所以一定要善于暴露弱点
 
 ### 8.借智慧。不要拼体力，要借用脑力
+如何确定你的创意能够打爆全国？
+测试工具：看得见、听得清、记得住、忘不掉
 
+### 9.借偏见 不要尊重共识，要借用偏见
+共识是偏见的终局，一旦事物到了终局，生命就结束了
+所以要不停地在共识中寻找偏见，偏见才是生命力
+绝大部分用户是被动型人格，对被动型人格，你要求他，命令他，他就会半推半就之间完成了购买
 
+### 10.借视角 不要谦卑仰视，要借用神之俯视
 
 
 
