--- a/business/company/网易.md
+++ b/business/company/网易.md
@@ -12,4 +12,20 @@
 
     xmind时间规划图
     
-总结起来，项目经理要活儿好、让人满意、及时进行“上下左右”不同对象汇报沟通，从做项目到关注业务的发展、再对人的关注。因此对
+总结起来，项目经理要活儿好、让人满意、及时进行“上下左右”不同对象汇报沟通，从做项目到关注业务的发展、再对人的关注。
+
+网易云介绍
+《幕后产品：打造突破式产品思维》
+作者提出产品经理四要诀践行
+- 创业
+- 求知
+- 联想
+- 善断
+
+洞察能力与架构能力是我抽象总结了产品经理各方面专业能力后得出的两个焦点，它们贯穿产品经理的整个成长过程。
+在互联网环境中，速度常常是很重要的因素，而且不应该被忽略。
+最后也要有实验意识
+
+基于对人群的分组，分组因子主要有两类：（形成一种二维坐标系）
+- 基于人口属性（如年龄、性别、教育程度、职业等）
+- 垂直领域属性（在音乐方面就是音乐的喜好程度）
