--- a/business/company/网易.md
+++ b/business/company/网易.md
@@ -29,3 +29,14 @@
 基于对人群的分组，分组因子主要有两类：（形成一种二维坐标系）
 - 基于人口属性（如年龄、性别、教育程度、职业等）
 - 垂直领域属性（在音乐方面就是音乐的喜好程度）
+
+这句话好：不是你选择了品牌，而是品牌选择了你。【拼多多的搜索推荐就是很好的例子】
+其实群体的研究，包括社会心理学的研究就是动物的研究，人性自我保护的研究，人性惰性的研究，贪嗔痴的研究。
+关于社区运营、意见领袖：最重要的一点，永远不要让任何一个群体的意见领袖的影响力超出或接近社区本身。
+培养共情能力，角色扮演
+
+产品挖掘需求:信息收集阶段（收集需求、分类梳理） => 评估阶段（深入、全面、真伪、优先级） => 精炼阶段（挖掘产品利益最大的需求）
+需求也是符合二八原则，80%的人提出20%的需求，除了要关注集中的主流需求外，剩余的长尾需求（市场上的创新空间）其实需要产品经理投入更多的精力。那些尚未发掘的需求，才是最可能创新的存在；
+任何可能不在一个频道上的沟通，都需要先将沟通的双方调整到一个频道上
+
+
