--- a/business/company/网易.md
+++ b/business/company/网易.md
@@ -39,4 +39,11 @@
 需求也是符合二八原则，80%的人提出20%的需求，除了要关注集中的主流需求外，剩余的长尾需求（市场上的创新空间）其实需要产品经理投入更多的精力。那些尚未发掘的需求，才是最可能创新的存在；
 任何可能不在一个频道上的沟通，都需要先将沟通的双方调整到一个频道上
 
+一个好产品不是通过堆砌需要产生的，就算满足了用户反馈的所有重要需求，依然可能对用户量涨不上去的情况。产品经理需要寻找那些对产品来说价值最大的需求，从而低成本地快速获得大量目标用户，这就是重要的思考路径之一。
+产品经理的基本功：用户研究和需求分析、数据分析、交互设计、信息架构、UI设计、编程能力
+往重点思考、往本质思考、往上层思考、往不同思考
+
+我们要给自己的脑袋设一道关卡，一旦意识到自己在用经验、过往的思路思考问题时，马上打住，先想一想这些经验和思路是否还适合现在。
+《设计心理学》、《情感化设计》等相关心理学书籍，一些心理学原理：《格式塔心理学》
+迈克尔波特《竞争优势》
 
