--- a/business/读书笔记/文明与现代化.md
+++ b/business/读书笔记/文明与现代化.md
@@ -103,3 +103,13 @@ Intellectual Honesty
 
 谷歌：
 口号：组织全球信息
+
+20240917
+李录的朋友圈
+1、市场经济是因，现代科技是果
+2、政府权力过大，必然导致民间权力过小，官不聊生必然导致民不聊生，古今中外都如此
+3、市场经济本质上是政府在经济上让权给民间。在市场经济中所有重要的决定都只能由私人来做出。政府的作用在于服务和维持规则，不是指挥。由政府指挥市场经济没有成功案例。民间经济、市场经济是否有活力，常常取决于政府在经济活动的权力是否足够小
+4、人从本性上都追求平等。追求结果平等的机制造成最大的不平等，追求机会平等的机制会形成对结果平等的最大近似。
+5、人对安全的需求远远大于对财富的追求。在已经温饱的前提下，没有人身安全保障，对财富的追求会大大降低
+6、市场经济是由自发的需求、自主的供给，通过自由竞争而形成的，其中需求是主因，供给是手段和结果。市场经济的真实总量实际上是由真实需求总量决定的，而不是由供给决定的。
+真实需求增加可以提振供给。真是需求降低，提振供给不仅不能解决问题，还会造成更多连带问题。
