--- a/business/company/网易.md
+++ b/business/company/网易.md
@@ -47,3 +47,10 @@
 《设计心理学》、《情感化设计》等相关心理学书籍，一些心理学原理：《格式塔心理学》
 迈克尔波特《竞争优势》
 
+聚焦并让用户热爱品牌：10个人爱你，好过100个人有点喜欢你
+我们最好在初期就构思好我们的品牌边界是泾渭分明的，还是包容性强一点的。 在互联网行业中，我个人更倾向于包容性强一些的品牌边界。
+即在扩张用户规模时扩展领域，而非在原有领域上过多纠缠。这是一个很重要的产品思维。
+商业推理 ———— 为何我能获得更大的发展？ （我们的产品核心是什么？ 、产品的边界在哪里？）
+
+
+
