--- a/business/company/网易.md
+++ b/business/company/网易.md
@@ -52,5 +52,6 @@
 即在扩张用户规模时扩展领域，而非在原有领域上过多纠缠。这是一个很重要的产品思维。
 商业推理 ———— 为何我能获得更大的发展？ （我们的产品核心是什么？ 、产品的边界在哪里？）
 
-
+曲库中 对于一首具体的歌曲，只要有五个人听过，就能够利用推荐算法的力量推荐给更多的人。
+我们要在实际场景中通过体会用户的感受去思考创新能否击中用户
 
