--- a/database/日常操作.md
+++ b/database/日常操作.md
@@ -2,12 +2,7 @@
 ##### 不同的数据库通过语法的拼接 concat
 ##### create table a as select * from    	    （只创建表的结构，而不会将原表的默认值一起创建）
 
-
-
-
-
 ##### Mysql循环插入语句代码
-
 ```mysql
 delimiter ;;
 create procedure idata()
@@ -23,18 +18,8 @@ delimiter ;
 call idata();
 ```
 
-
-
-
-
 innodb 每个数据页的大小默认是16kb
 Mysql5.6引入了索引下推优化
-
-
-
-
-
-
 
 ### Mongo更新语句
 ```mongo
@@ -43,10 +28,12 @@ db.getCollection('202105_person_time').update({"courseType":"精品定制课","c
 
 multi：可选，mongoDB默认是false，只更新找到的第一条记录，如果这个参数是true，
 
-
-
-
-
 ### vi/vim中如何在每行行首或行尾插入指定字符串
 行首 `:%s/^/your_word/`
 行尾 `:%s/$/your_word/`
+
+### PG-SQL操作
+修改seq：
+```
+ALTER SEQUENCE service_education.teacher_change_id_seq RESTART WITH 529774;
+```
