--- a/business/做人做事/日常警醒.md
+++ b/business/做人做事/日常警醒.md
@@ -1,3 +1,6 @@
 勿  有急智无远谋，见小利略风险，一有钱就膨胀，德不配位
 永远不要低估市场的愚蠢程度
 善弈者无妙手
+
+懂而装不懂，远远比不懂装懂难得多。观点是可以选择相信或不相信的，而事实就是事实。必须要接受。
+高手和菜鸟的区别也正在这里，菜鸟会选择在猜想变成现实的时候兑现一部分利润，而高手会在事实明确，方向更加确定的时候果断加仓。
