--- a/business/company/网易.md
+++ b/business/company/网易.md
@@ -55,3 +55,6 @@
 曲库中 对于一首具体的歌曲，只要有五个人听过，就能够利用推荐算法的力量推荐给更多的人。
 我们要在实际场景中通过体会用户的感受去思考创新能否击中用户
 
+我们可以有意识地在团队沟通、协作中锻炼复述能力，复述一方面会让我们每个人都聆听更加仔细和用心，另一方面可以与表达者进一步对齐信息，发现那些变化、损耗掉的信息，
+并在这个环节进行弥补。
+
