地平线+余凯的故事

--- a/business/做人做事/日常警醒.md
+++ b/business/做人做事/日常警醒.md
@@ -4,3 +4,16 @@
 
 懂而装不懂，远远比不懂装懂难得多。观点是可以选择相信或不相信的，而事实就是事实。必须要接受。
 高手和菜鸟的区别也正在这里，菜鸟会选择在猜想变成现实的时候兑现一部分利润，而高手会在事实明确，方向更加确定的时候果断加仓。
+
+产品经理：大多数产品都是有生命周期的。在产品生命周期末端，我们花很大力气，都拉不回来。我们不需要做很多产品，能把一个产品做成精品，就够了。
+这个产品，只要他足够顶尖，他能给你带来10个平庸产品加起来都达不到的东西，无论是名还是利。
+
+父母与子女，与其说是爱的回报，不如说是爱的传承
+真正的极端的恐惧，是宁静的。股市也一样，跌到极致，股民们仿佛都消失了，该干嘛干嘛去，股票绝口不提
+
+最最危险的时候，不应该只想着防守，还要想要进攻，做好随时投入进攻的准备。
+
+
+
+
+
