--- a/business/company/地平线.md
+++ b/business/company/地平线.md
@@ -3,3 +3,5 @@
 其实科技领域，技术趋势的判断上往往趋同，真正决定企业的，是那些关键的拐点时刻。所谓【时代跳一帧，创业公司就少一条命】。
 【在确定性上应对不确定】，而不是【在不确定性里找确定性】
 【已经在爬山了，就别在悬崖边上跳舞】的世界观。这里面没有绝对的运气，也没有绝对的英明，都是人和时代的共振。
+软件必须依赖硬件平台，计算架构必须先行定义。 他一上来就要来解决这个行业里面最有价值和最难的一件事。
+“不能在悬崖边上跳舞”，这是一句余凯很爱说的话
