地平线+余凯的故事

--- a/business/company/地平线.md
+++ b/business/company/地平线.md
@@ -5,3 +5,7 @@
 【已经在爬山了，就别在悬崖边上跳舞】的世界观。这里面没有绝对的运气，也没有绝对的英明，都是人和时代的共振。
 软件必须依赖硬件平台，计算架构必须先行定义。 他一上来就要来解决这个行业里面最有价值和最难的一件事。
 “不能在悬崖边上跳舞”，这是一句余凯很爱说的话
+
+2019年李良和余凯还在公司的精益管理方面做了大量的探讨。所谓精益 —— 就是在无论研发还是生产环节，都要把资源投到最关键地方。
+
+地平线合作的车企 长安=> 理想ONE => 理想L8/L9
