--- a/business/做人做事/日常警醒.md
+++ b/business/做人做事/日常警醒.md
@@ -1,4 +1,4 @@
-勿  有急智无远谋，见小利略风险，一有钱就膨胀，德不配位
+勿 有急智无远谋，见小利略风险，一有钱就膨胀，德不配位
 永远不要低估市场的愚蠢程度
 善弈者无妙手
 
@@ -13,7 +13,8 @@
 
 最最危险的时候，不应该只想着防守，还要想要进攻，做好随时投入进攻的准备。
 
-
+买了公司要警醒：我买的东西有坑吗？ 存在什么样的危险？
+保持恐惧、保持自我否定，这在绝大多数情况下，反倒让你能活下去。
 
 
 
