--- a/business/company/极客未来/青训营培训.md
+++ b/business/company/极客未来/青训营培训.md
@@ -2,5 +2,37 @@
 出自《金字塔原理：思考、表达和解决问题的逻辑》
 知情减少恐惧：有未知，真恐惧。
 一、为什么使用金字塔结构
-用户思维 史玉柱的书：谁消费我的产品，我就一定要把他研究透
+用户思维 
+    史玉柱的书：谁消费我的产品，我就一定要把他研究透
 简化记忆项目
+    首音效应、近音效应
+    归类、分组的方式、抽象概括
+无关联不记忆
+
+研究用户
+- 有未知，增加恐惧：提前告知减少障碍
+- 记忆量，有限量：神奇的数字7
+- 无关联，不记忆：相关联的事物助理解
+- 少且精，更入心：少即是多
+- 爱归类，人天性：大脑爱寻找"共性"
+- 同类别，论排序：心智爱建立阶梯次序
+
+金字塔原理：
+- 结论在前
+- 结构：核心观点（中心思想）、一级（关键句）、二级（支持论据）、素材
+- 麦肯锡电梯理论 30秒钟电梯理论/电梯演讲 —— 3S：surprise、simple、structure ... ? 艹 ，怎么写都可以
+
+金字塔原理的四项原则：（论、证、类、序）
+- 结论先行：文章只支持一个思想，此思想将概括所有各级各组思想(解决痛点：有未知，增加恐惧；少且精，更入心)
+- 以上统下：任何层次思想须是下一层次思想的概括（上层是下层思想的结论，下层须论述、支撑上层、下至上概括，上到下论证）
+- 归类分组：每组思想须属于同一逻辑范畴（MECE：Multiple Exclusive，Collectively，Exhaustive）
+- 逻辑递进：每组思想都须按逻辑顺序排序
+
+自上而下问答法：步骤分解
+拟定场景、规划主题、设想疑问、答复疑问
+
+
+组内员工基本情况表：非正式的交流与社交场合【小组内所有成员】
+员工培养规划制定：IDP（个人发展计划） SWOT分析（Strength 优势、Weakness 劣势、Opportunity 机会、Threat 应对）【所带的小组内 找出一位成员】
+培训法则：721法则 
+发展计划3-5项？
