--- a/business/company/网易.md
+++ b/business/company/网易.md
@@ -58,3 +58,16 @@
 我们可以有意识地在团队沟通、协作中锻炼复述能力，复述一方面会让我们每个人都聆听更加仔细和用心，另一方面可以与表达者进一步对齐信息，发现那些变化、损耗掉的信息，
 并在这个环节进行弥补。
 
+
+俞军《十二条产品军规》
+张小龙《微信公开课》
+
+产品经理对业务最核心的贡献是什么？ 不管是什么级别的产品经理，都应当以产品的想法和创意为主，构建对业务有重要促进作用的产品形态。沟通、项目推进等任务也需要，
+但它们不能体现产品经理最核心的价值，不应该本末倒置，不应该占据产品经理日常工作的重要时间。
+
+
+对学习的思考
+- 对学习对象的思考：
+  - 不断地加强洞察与架构这个焦点核心。难点是我们怎么悟到它、掌握它并形成自己的认知
+- 对学习成长本身的思考
+  - 有三个阶段：向外界的一部分学习、向外界的全部学习、自省（由内而发的学习）
