纳瓦尔宝典 read

--- a/daily/world/系统之美.md
+++ b/daily/world/系统之美.md
@@ -1,3 +1,15 @@
 《系统之美》
 作者：德内拉梅多斯
 本书编辑：Diana Wright 戴安娜莱特
+
+### 导读：
+#### 在非线性的世界里，不要用线性的思维模式
+#### 拿起纸笔，使用配套的系统动力学建模软件（IThink、Stella、Vensim等）
+
+#### 找到属于你的系统之美
+#### 不能只通过了解系统的各个构成来认知系统整体的行为
+
+### 第一章 系统之基础
+#### 总体大于部分之和
+#### 必须通过实际行动来推断系统的目标，而不能只看表面的言辞或其标榜的目标
+#### 非人类系统的“功能”，人类系统的“目标”
