--- a/business/finance/营销/需求/真需求.md
+++ b/business/finance/营销/需求/真需求.md
@@ -84,4 +84,33 @@ PMF(产品市场匹配)：产品和市场达到最佳的契合点，你所提供
 先进行“场景穷举”，再进行“场景识别”
 我们应该在高频出现，且能形成强感知的时刻打磨产品。如果能找到黄金场景，那就值得拿出200%的力气去打磨、呈现。
 感觉纯净水和天然水之争、0添加酱油和添加剂酱油之争差不多
+鬼谷子对于攻心，讲了最核心的四个字：符、权、决、枢
 
+
+### 关系：共识的成果
+我们往往需要走很长的路，在很多年以后，才清楚自己是一个什么样的生物，谁是自己的同类。
+弱者的爱
+一个总是不肯全情投入的人，也是一个没有归属感的人
+很多创业者居然不知道一个常识：创新不赚钱
+
+### 模式：自己的内在生活与成长
+什么是商业模式？
+模式是一个企业构建自己的竞争力，从而活下去的秘密
+模式设计主要包含三大块：能力系统、变现逻辑和分配机制
+
+认知是因，创新是果。
+认知决定了能力的顶，那是什么决定了认知呢？
+是用心，是爱。根本性的情愿，胜过一切天赋
+
+
+### 能力系统
+前提：需求明确的超大市场
+只有带着绝对的爱，或者绝对的使命，才会如此
+
+### 变现逻辑
+### 分配机制
+优秀的人都是分配资源的高手
+
+马斯克选人，选的是以成就感为食物的人
+拖延的反面是具体，而提高行动力的关键在于提升掌控的精准度。
+马斯克控制一件事的方法就是具体具体再具体
