feat：海底捞读书笔记

--- a/business/company/海底捞.md
+++ b/business/company/海底捞.md
@@ -9,7 +9,14 @@
 好的管理一定是激励为主，监控为辅
 让人成熟的不是岁月，而是经历
 做人的最高境界是无我，做事的最高境界是忘我
+海底捞-师徒制，麦当劳主要靠流程与制度管理，所有工作都有详细的程序和标准
+如何修正流程和制度本身的弊端？ 靠人，靠训练有素、素质高和责任心强的人
+人情与制度的平衡：即需要流程和制度，又需要管理者的感觉，两者谁重谁轻
+绩效考核有句名言：考核什么，员工就关注什么。
+丰田汽车管理方法的发明者 大野耐一说，丰田管理方法的精髓是现场发现问题，现场解决问题
 有意思的现象：
     龙湖   -> 员工别把公司当成家
     海底捞 -> 让员工有家的感觉
 
+我们现在对每个火锅店的考核只有三类指标：一是顾客满意度，二是员工积极性，三是干部素养
+张勇的心病是培养人，他要的人，不仅是能用锄头，而是还要分清苗和草
