--- a/business/读书笔记/文明与现代化.md
+++ b/business/读书笔记/文明与现代化.md
@@ -113,3 +113,6 @@ Intellectual Honesty
 5、人对安全的需求远远大于对财富的追求。在已经温饱的前提下，没有人身安全保障，对财富的追求会大大降低
 6、市场经济是由自发的需求、自主的供给，通过自由竞争而形成的，其中需求是主因，供给是手段和结果。市场经济的真实总量实际上是由真实需求总量决定的，而不是由供给决定的。
 真实需求增加可以提振供给。真是需求降低，提振供给不仅不能解决问题，还会造成更多连带问题。
+
+20250326
+感悟：现在来看李录的发言正好是当时市场经济情绪的低点，呵呵~
