--- a/business/finance/营销/跨越鸿沟.md
+++ b/business/finance/营销/跨越鸿沟.md
@@ -2,3 +2,22 @@
 跨越鸿沟本质上是一种B2B市场开发模式
 本书的作用就是向读者揭示跨越鸿沟时期的营销决策逻辑，让企业管理团队的每一个成员都能够参与到市场开发的过程。
 要想安然无恙地跨越鸿沟，所有人必须达成共识，朝着共同的目标奋斗
+
+这种触发改变的新产品，学界称其之为非连续性创新或者颠覆式创新
+与相反的是连续性创新或者持续性创新，也就是正常的产品升级
+
+高科技企业获得的巨额财富主要源于边际利润。
+
+真正值得警惕的是将早期采用者和早期大众分裂开来的那条深不可测的鸿沟。
+这是技术采用生命周期中最可怕的、最无情的鸿沟阶段，而这条鸿沟通常难被察觉，所以鸿沟阶段也是最危险的
+
+重新认识高科技营销
+营销的目的就是开拓并且塑造一个真实存在的市场，而不是创造虚假的幻觉。
+
+高科技营销的三个阶段：
+1.早期市场
+    技术狂热者的作用：充当功能、用户测试角色，点燃大火。
+    在商业领域，技术狂热者是新技术的把关人。他们不但有兴趣了解新技术，而且他们也是大家公认的有能力测评新技术的人。因此，他们是通过高科技营销成功之路的
+    第一把钥匙。
+    早期采用者（高瞻远瞩者）：他们梦想核心是一个商业目标，而不是技术目标。高瞻远瞩者追求的不是小小的改善，而是根本性的突破
+    高瞻远瞩者追求的不是小小的改善，而是根本性的突破。高瞻远瞩者与技术狂热者不同，他们关注的价值不在于技术本身，而在于借助这种技术能够实现的战略飞跃
