--- a/business/company/极客未来/麦肯锡结构化战略思维.md
+++ b/business/company/极客未来/麦肯锡结构化战略思维.md
@@ -1,2 +1,32 @@
 麦肯锡结构化战略思维
 
+四大原则：
+一、数据说话
+    1.重视对常识推理能力的评估
+二、洞见优于表象
+三、MECE原则
+四、假设为前提
+    一旦事实证明错误，我就能够放弃任何假设，不管我多么喜欢这个假设 - 达尔文
+
+从宏观到微观，从外部到内部的顺序
+从宏观PEST模型开始，到行业赛道吸引力的波特五力模型，然后是公司能力的SWOT分析，再到内部公司管理的麦肯锡7S模型
+最后看看多维度理论如BCG矩阵和消费者细分市场感知分析
+
+多维度分析框架：BCG矩阵和消费者细分市场
+BCG矩阵（市场增长率 - 相对市场份额矩阵）
+对于结构化战略思维的初学者来说，复用经典多为图谱是必经阶段。在适当的场景下应用会带来实用的商业洞见。
+
+新麦肯锡五步法：
+一、定义问题
+    1.在定义问题时，第一步要摸清问题的大背景，从全局角度看待这个具体问题
+    2.定义成功解决问题的最终验证标准。（可以从财务上或非财务上）
+    3.明确问题的边界
+    4.弄清楚解决问题的限制条件
+    5.明确问题解决的相关人员和责任人
+    6.明确能调配的资源
+
+    
+二、结构化分析
+三、提出假设
+四、验证假设
+五、交付
