--- a/business/finance/营销/跨越鸿沟.md
+++ b/business/finance/营销/跨越鸿沟.md
@@ -21,3 +21,15 @@
     第一把钥匙。
     早期采用者（高瞻远瞩者）：他们梦想核心是一个商业目标，而不是技术目标。高瞻远瞩者追求的不是小小的改善，而是根本性的突破
     高瞻远瞩者追求的不是小小的改善，而是根本性的突破。高瞻远瞩者与技术狂热者不同，他们关注的价值不在于技术本身，而在于借助这种技术能够实现的战略飞跃
+    找到那些能够接触大老板的技术狂热者，与他们一起合作，才能在高科技营销活动中取得成功
+    在制定任何一个长期的战略营销计划之前，我们都必须深入了解实用主义客户，而且要重点关注如何赢得他们的信任。
+    实用主义者的沟通方式是“纵向的”，也就是说，他们更多是与他们非常相似的人交流。技术狂热者和早期采用者的沟通方式是“横向”的，他们经常会跨越行业的界限在各行各业寻找志趣相投的人
+    
+2.跨域鸿沟(让实用主义者眨眼)
+    创业公司在获得广泛的市场认可之前顺利征服实用主义客户的关键，就是集中大量的资源攻占一个狭小的利基市场
+    我们跨越鸿沟的第一个目标：获得参照客户群，这是迫在眉睫的任务，为了实现这个目标，我们必须承诺提供（或者至少保证提供）整体产品
+    在鸿沟时期，以销售为导向的后果是致命的
+    脱离鸿沟的第一个关键就是选择一个细分市场作为滩头阵地。这是跨越鸿沟的一个标准模式， 通常是职能部门牵头（他们遇到了问题），管理部门确定优先级（这个问题让整个公司都痛苦），技术部门跟进（他们必须使新系统正常运作，同时还要维护所有旧系统）
+    商业模式驱动比技术驱动更加平滑，相对技术驱动也较好跨越鸿沟
+    利基市场是一个垫脚石，得有，但不能留恋
+    惠普前执行副总裁：“永远不要进攻加强防守的山头”
